--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -54,7 +54,7 @@ hr.star-light {
   border-color: white;
 }
 hr.star-light:after {
-  background-color: #18BC9C;
+  background-color: #000000;
   color: white;
 }
 hr.star-primary {
@@ -69,8 +69,8 @@ hr.star-primary:after {
 }
 header {
   text-align: center;
-  background: #18BC9C;
-  color: white;
+  background: #000000;
+  color: black;
 }
 header .container {
   padding-top: 100px;
